template/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: $GIT_REPOSITORY_URL
  name: $SERVICE_NAME
  labels:
    app: $APPLICATION_NAME
spec:
  replicas: 3
  selector:
    matchLabels:
      app: $APPLICATION_NAME
  template:
    metadata:
      labels:
        app: $APPLICATION_NAME
    spec:
      containers:
        - name: $APPLICATION_NAME-$SERVICE_NAME
          image: <app-image-with-tag>
          ports:
            - containerPort: $SERVICE_PORT
