template/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $APPLICATION_NAME-$SERVICE_NAME
spec:
  selector:
    app: $APPLICATION_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: $SERVICE_PORT
